2014-10-12  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 33423: Doc/Zsh/expn.yo, Src/subst.c: parameter expansion
	(p) flag allows delimited strings to contain simple $param
	expansions.

2014-10-11  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Test/B06fc.ztst: tests for 33429.

2014-10-10  Barton E. Schaefer  <schaefer@zsh.org>

	* 33429: Src/builtin.c, Src/hist.c: disallow non-integer values
	for the temporary HISTSIZE and SAVEHIST of "fc -p", and fix
	crash on zero values for same

2014-10-11  Oliver Kiddle  <opk@zsh.org>

	* 33424: Completion/Debian/Type/_deb_architectures,
	Completion/Debian/Command/_apt-file,
	Completion/Debian/Command/_dak, Completion/Debian/Command/_madison,
	Completion/Debian/Command/_dpkg-buildpackage,
	Completion/Debian/Command/_pbuilder,
	Completion/Debian/Command/_reprepro,
	Completion/Debian/Command/_svn-buildpackage: use common function
	for completing Debian architectures

2014-10-10  Oliver Kiddle  <opk@zsh.org>

	* 33420: Completion/Zsh/Command/_zmodload: complete -R/-m options and
	fix feature completion

	* fREW Schmidt: 33375: Completion/Unix/Command/_runit: sv completion

	* Daniel Shahaf: 33396: Completion/Unix/Command/_xxd: new completion

	* Yuri D'Elia: 33397: Completion/X/Command/_xautolock: new completion

2014-10-09  Frank Terbeck  <ft@bewatermyfriend.org>

	* 33405: Functions/VCS_Info/vcs_info: Make sure maxexports
	is set when VCS_INFO_set is called

2014-10-09  Barton E. Schaefer  <schaefer@zsh.org>

	* 33403: Completion/Base/Utility/_call_program: be conservative
	about redirecting stderr, the caller may have already done so

2014-10-09  Marc Finet  <m.dreadlock@gmail.com>

	* 33391: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: fix applied patch detection on git am

2014-10-08  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk: update to 5.0.7-dev-0 to avoid
	installation clashes with 5.0.7.

2014-10-07  Peter Stephenson  <p.w.stephenson@ntlworld.com>